SCM_BENCHMARKS = benchmarks/0-reference.bm		\
		 benchmarks/arithmetic.bm		\
		 benchmarks/bytevectors.bm		\
		 benchmarks/chars.bm			\
		 benchmarks/continuations.bm		\
                 benchmarks/if.bm			\
                 benchmarks/logand.bm			\
		 benchmarks/ports.bm			\
		 benchmarks/r6rs-arithmetic.bm		\
		 benchmarks/read.bm			\
		 benchmarks/srfi-1.bm			\
		 benchmarks/srfi-13.bm			\
		 benchmarks/structs.bm			\
		 benchmarks/subr.bm			\
		 benchmarks/uniform-vector-read.bm	\
		 benchmarks/vectors.bm			\
		 benchmarks/vlists.bm			\
		 benchmarks/write.bm			\
		 benchmarks/strings.bm

EXTRA_DIST = guile-benchmark lib.scm $(SCM_BENCHMARKS)	\
	     ChangeLog-2008
